--- a/less/homepage.less
+++ b/less/homepage.less
@@ -6,14 +6,11 @@
     @media (max-width: 500px) {
         padding-top: 100px;
     }
-
     .hospital{
     width: 95%;
     height: 50%;
     border-radius: 10px;
     }
-
-    
 }
 
 
@@ -23,7 +20,9 @@
     display: flex;
     margin: 0 auto;
     justify-content: space-between;
-    flex-wrap: wrap;
+    @media ( max-width: 500px ){
+        flex-wrap: wrap;
+    }
     .section1{
         width: 45%;
         display: flex; 
